<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <string name="app_name">TouchBase</string>

    <!-- Titles and Labels -->
    <string name="touch_base_fragment_title">TouchBase</string>
    <string name="friends_fragment_title">Friends</string>
    <string name="since_touch">Since\nTouchBase</string>
    <string name="event_title">Log Event</string>
    <string name="select">select</string>
    <string name="date">date</string>
    <string name="description">description</string>
    <string name="save">save</string>
    <string name="clear">clear fields</string>
    <string name="empty_fields_warning">An input fields is empty!</string>
    <string name="entry_saved">TouchBase Successfully Logged</string>

    <!-- Main Menu -->
    <string name="description_event">\nTap here to Log an Event</string>
    <string name="description_touch_base">\nTap here to see who you \nneed to Touch Base with</string>
    <string name="description_friends">\nTap here to see a list of \nyour friends or to edit their info</string>

    <!-- Contact Info -->
    <string name="title_contact_Info">Contact Info</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone_number">Phone \nNumber</string>
    <string name="contact_updated">Friend Info Updated</string>

    <!-- Description Fragment -->
    <string name="title_description">Entry Description</string>
    <string name="empty_description_warning">please enter a description</string>

    <!-- Default Entries -->
    <string name="default_user_name">Your Friend</string>
    <string name="default_last_touch">25 Oct 2018</string>
    <string name="default_touch_count">5</string>
    <string name="default_touch_count_unit">D</string>

    <!-- File Names -->
    <string name="shared_preferences_file_name">com.mattercube.touchbase.preferences</string>

    <!-- Miscelanious -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice_me">NOTICE ME SENPAI!!!!</string>

</resources>
