<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfoFragment"
    android:background="@color/colorPrimary">

    <!-- Grid layout based on https://www.vogella.com/tutorials/Android/article.html#androidstudio_starter -->
    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:layout_margin="@dimen/text_size_small"
        android:background="@color/greyed"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/contact_header"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_row="0"
            android:text="@string/title_contact_Info"
            android:textSize="@dimen/main_header"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/contact_name"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/contact_name"
            android:textColor="@color/white">
        </TextView>

        <EditText
            android:id="@+id/input_entry"
            android:textColor="@color/pinkish"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:ems="10"
            android:layout_marginStart="@dimen/margin_small"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/contact_phone_number"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="2"
            android:text="@string/contact_phone_number"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/margin_small">
        </TextView>

        <EditText
            android:id="@+id/input_contact_phone_number"
            android:textColor="@color/pinkish"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:inputType="phone"
            android:ems="10"
            android:layout_marginStart="@dimen/margin_small"/>

        <TextView
            android:id="@+id/button_save"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/save"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_default"/>

    </GridLayout>
</androidx.appcompat.widget.LinearLayoutCompat>