<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".TouchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyed"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_icon_1"
            android:layout_width="@dimen/resize_person_icon_medium"
            android:layout_height="@dimen/resize_person_icon_medium"
            android:layout_marginStart="@dimen/margin_default"
            android:src="@drawable/person_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/friend_name"
            app:layout_constraintBottom_toBottomOf="@id/touch_counter"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_icon_1"
            app:layout_constraintBottom_toTopOf="@id/touch_counter"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_small"/>

        <TextView
            android:id="@+id/touch_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_touch_count"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintTop_toBottomOf="@id/friend_name"
            app:layout_constraintStart_toEndOf="@id/user_icon_1"
            android:layout_marginStart="@dimen/margin_default" />

        <TextView
            android:id="@+id/touch_counter_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_touch_count_unit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintTop_toTopOf="@id/touch_counter"
            app:layout_constraintStart_toEndOf="@id/touch_counter"
            android:layout_marginStart="@dimen/margin_even_smaller"/>

        <TextView
            android:id="@+id/label_since_touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/since_touch"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintTop_toTopOf="@id/touch_counter_unit"
            app:layout_constraintStart_toEndOf="@id/touch_counter_unit"
            app:layout_constraintBottom_toBottomOf="@id/touch_counter_unit"
            android:layout_marginStart="@dimen/margin_even_smaller"/>

        <ImageView
            android:id="@+id/call_icon"
            android:layout_width="@dimen/resize_call_icon_medium"
            android:layout_height="@dimen/resize_call_icon_medium"
            app:srcCompat="@drawable/phone_icon"
            app:layout_constraintTop_toBottomOf="@id/touch_counter"
            app:layout_constraintStart_toStartOf="@id/touch_counter"
            android:layout_marginTop="@dimen/margin_default"/>

        <ImageView
            android:id="@+id/video_call_icon"
            android:layout_width="@dimen/resize_call_icon_medium"
            android:layout_height="@dimen/resize_call_icon_medium"
            app:srcCompat="@drawable/video_call_icon"
            app:layout_constraintTop_toTopOf="@id/call_icon"
            app:layout_constraintStart_toEndOf="@id/call_icon"
            android:layout_marginStart="@dimen/margin_large"/>

        <ImageView
            android:id="@+id/text_icon"
            android:layout_width="@dimen/resize_call_icon_medium"
            android:layout_height="@dimen/resize_call_icon_medium"
            app:srcCompat="@drawable/text_icon"
            app:layout_constraintTop_toTopOf="@id/video_call_icon"
            app:layout_constraintStart_toEndOf="@id/video_call_icon"
            android:layout_marginStart="@dimen/margin_large"/>

        <ImageView
            android:id="@+id/log_event"
            android:layout_width="@dimen/resize_log_event_icon_medium"
            android:layout_height="@dimen/resize_log_event_icon_medium"
            app:srcCompat="@drawable/log_event2"
            app:layout_constraintTop_toTopOf="@id/text_icon"
            app:layout_constraintStart_toEndOf="@id/text_icon"
            app:layout_constraintBottom_toBottomOf="@id/text_icon"
            android:layout_marginStart="@dimen/margin_large"/>

        <ImageView
            android:id="@+id/arrow_icon"
            android:layout_width="@dimen/resize_person_icon_medium"
            android:layout_height="@dimen/resize_person_icon_medium"
            app:srcCompat="@drawable/arrow_icon"
            app:layout_constraintEnd_toEndOf="@id/log_event"
            app:layout_constraintTop_toTopOf="@id/user_icon_1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>